[package]
name = "csvtosql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
csv = "1.1.6"
rusqlite = { version = "0.28.0", features = ["vtab", "csvtab", "modern_sqlite", "bundled"] }
